fix : 잘못된 경계 수정